--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+.classpath
+.project
+.settings/
+.idea/
+Lambda/target/
