--- a/Lambda/pom.xml
+++ b/Lambda/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.fhnw.pcls</groupId>
   <artifactId>casestudylambda</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
-  <name>case-study-lambda</name>
-  <description>Java code for a simple lambda function in AWS needed for the case study of the fhnw module pcls</description>
+  <version>1.4</version>
+  <name>java-casestudylambda</name>
+  <description>case-study-lambda Lambda Function</description>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -24,6 +24,7 @@
       <version>2.8.9</version>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
@@ -51,8 +52,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+           <source>1.8</source>
+           <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
